welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:5: error: illegal start of simple expression
var lm=litMessage()
^